--- a/package.json
+++ b/package.json
@@ -19,25 +19,26 @@
     "serve": "node build.mjs serve"
   },
   "dependencies": {
+    "@curvenote/ansi-to-react": "^7.0.0",
     "client-zip": "^1.3.1"
   },
   "devDependencies": {
-    "binaryen": "^117.0.0",
     "@chialab/esbuild-plugin-meta-url": "^0.18.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fontsource/inter": "^5.0.16",
     "@mui/icons-material": "^5.15.10",
     "@mui/joy": "^5.0.0-beta.28",
+    "@spade-lang/spade": "0.9.0-dev943.733.2aa6ac-bc3d06",
+    "@spade-lang/swim": "0.8.0-dev234.755.9f5a98-091e50",
     "@types/d3": "^7.4.3",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
-    "@yowasp/runtime": "8.0.40",
-    "@yowasp/yosys": "^0.39.37-dev.676",
     "@yowasp/nextpnr-ecp5": "^0.7.187-dev.514",
     "@yowasp/openfpgaloader": "^0.3.1-920.21",
-    "@spade-lang/spade": "0.9.0-dev943.733.2aa6ac-bc3d06",
-    "@spade-lang/swim": "0.8.0-dev234.755.9f5a98-091e50",
+    "@yowasp/runtime": "8.0.40",
+    "@yowasp/yosys": "^0.39.37-dev.676",
+    "binaryen": "^117.0.0",
     "d3-wave": "^1.1.5",
     "esbuild": "^0.20.0",
     "monaco-editor": "^0.46.0",
